--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,6 +4,13 @@
   <%= f.label :検索欄 %>
   <%= f.text_field :name %>
   <%= select :status, :name, Task.statuses.keys.to_a, include_blank: "---"  %>
+   <%= select_tag :label_id,
+                      options_from_collection_for_select(Label.all, :id, :name, params[:label_id]),
+                      {
+                        prompt: 'タグで絞り込み',
+                        onchange: 'submit(this.form);'
+                      } 
+      %>
   <%= f.submit "検索する" %>
 <% end %>  
 
@@ -16,7 +23,7 @@
       <th>終了期限<%= link_to '（期限順）',tasks_path(sort_expired: "true") %></th>
       <th>進捗状態</th>
       <th>優先度<%= link_to '（優先順）',tasks_path(rank: "true") %></th>
-      <th>ラベル</th>
+      <th>タグ</th>
     </tr>
   </thead>  
   
